Mackey-Glass equation demo

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -13,7 +13,7 @@
    "id": "1a00570b",
    "metadata": {},
    "source": [
-    "The Mackey-Glass equation considers the population of mature blood cells, x(t), and models the process of the production of these cells. It has the following delay differential equation (DDE) system:\n",
+    "The Mackey-Glass equation considers the population of mature blood cells, $x(t)$, and models the process of the production of these cells. It has the following delay differential equation (DDE) system:\n",
     "\n",
     "```math\n",
     "\\begin{align}\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
     "beta=2 \n",
     "n=10 \n",
     "tau=0 #delay\n",
-    "x0=((beta-gamma)/(gamma))^(1/n) #obtained from solving f(x*,...,x*)=0 problem\n",
+    "x0=((beta-gamma)/(gamma))^(1/n) #obtained from solving f(x*,...,x*)=0\n",
     "nd=1 #one delay\n",
     "\n",
     "y01,feq= DDETools.create_ststfunc(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "id": "b6ab8081",
    "metadata": {},
    "outputs": [
@@ -136,12 +136,12 @@
    "id": "df5682d6",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point, where $\\tau$ taken to be 0.4:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example, the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of `1` is the equilibrium point if stable and has `0` if it is unstable. Below we find the stability of one equilibrium point, where $\\tau$ is taken to be 0.4:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "id": "3cc0add2",
    "metadata": {},
    "outputs": [
@@ -165,12 +165,12 @@
    "id": "0e703789",
    "metadata": {},
    "source": [
-    "We now find the stability for all the points on the equilibria branch, which are given in the vector ```stab```:"
+    "Note that the stability indicator is `1` so the above equilbrium point is stable. We'll now find the stability for all the points on the equilibria branch, which are given in the vector ```stab```:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "id": "eb2591f3",
    "metadata": {},
    "outputs": [
@@ -226,12 +226,12 @@
    "id": "b9947f22",
    "metadata": {},
    "source": [
-    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in the \"DDE_stability_breda_et_al\" folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` so we can loop over all the equilibrium points."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in the \"DDE_stability_breda_et_al\" folder. To use ```stab_func_DDE``` for analysis of Mackey-Glass equilibria, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found either manually or by using ```f_deriv```. In this example we'll use ```f_deriv``` so we can loop over all the equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
    "id": "909035d2",
    "metadata": {},
    "source": [
-    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start finding the Hopf parameters by finding the initial guess of the τ value for the Hopf bifurcation."
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start finding the Hopf parameters by first finding the initial guess of the τ value for the Hopf bifurcation."
    ]
   },
   {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "id": "fadae4dd",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -373,13 +373,13 @@
     "tau_hopf=yh1[end]\n",
     "om_hopf=yh1[end-1]\n",
     "x_hopf=yh1[1]\n",
-    "println(\"The τ value for hopf bifurcation: $tau_hopf\")\n",
-    "println(\"The ω value for hopf bifurcation: $om_hopf\")"
+    "println(\"The τ value for Hopf bifurcation: $tau_hopf\")\n",
+    "println(\"The ω value for Hopf bifurcation: $om_hopf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -404,12 +404,12 @@
    "id": "dca97ee9",
    "metadata": {},
    "source": [
-    "We see here that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $\\tau$ value obtained from ```stab_func_DDE``` ($\\approx 0.48$) is closer to the true $\\tau$ Hopf value ($\\approx 0.47$) than the initial guess when using ```stab_func_matrix``` ($\\approx 0.49$)."
+    "We see here that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $\\tau$ value obtained from ```stab_func_DDE``` ($\\approx 0.48$) is closer to the true $\\tau$ Hopf value ($\\approx 0.47$) than the initial guess for $\\tau$ when using ```stab_func_matrix``` ($\\approx 0.49$)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
@@ -469,10 +469,10 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=DDETools.create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd) #outputs (initial) starting point of Hopf information with information on both parameters (τ and β) and hopf function\n",
+    "yheq01,fhopfeq1=DDETools.create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd) #outputs (initial) starting point of Hopf information with information on both parameters (τ and β) and the Hopf function\n",
     "\n",
-    "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 \n",
-    "yheqlist2,heqtan2=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,-1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
+    "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,1,-1],nmax=500) #tracks β and τ backwards from β=2, τ≈0.47 \n",
+    "yheqlist2,heqtan2=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,-1,1],nmax=500) #tracks β and τ forwards from β=2, τ≈0.47\n",
     "\n",
     "#Plot of continuation/tracking in (τ,β) plane\n",
     "fig5=Figure()\n",
@@ -499,9 +499,8 @@
    "id": "13d9164a",
    "metadata": {},
    "source": [
-    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009\n",
-    "2. S. Manjunath and G. Raina. *Stability and hopf bifurcation analysis of the mackey-glass and lasota equations*. The 26th Chinese Control and Decision Conference\n",
-    "(2014 CCDC), pages 2076–2082, 2014."
+    "1. Breda D., Maset S., Vermiglio R. (2009). 'TRACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations', *Lecture Notes in Control And Information Sciences*, volume 388, pp 145-155. Available at: http://dx.doi.org/10.1007/978-3-642-02897-7_13\n",
+    "2. Manjunath S. and Raina G. (2014) . 'Stability and Hopf bifurcation analysis of the Mackey-Glass and Lasota equations'. *The 26th Chinese Control and Decision Conference (2014 CCDC)*, pp. 2076–2082. Available at: https://doi.org/10.1109/CCDC.2014.6852509"
    ]
   }
  ],
