Mackey-Glass equation demo

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -136,7 +136,7 @@
    "id": "df5682d6",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example, the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of `1` is the equilibrium point if stable and has `0` if it is unstable. Below we find the stability of one equilibrium point, where $\\tau$ is taken to be 0.4:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example, the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of `1` if the equilibrium point is stable and has `0` if it is unstable. Below we find the stability of one equilibrium point, where $\\tau$ is taken to be 0.4:"
    ]
   },
   {
