--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -20,7 +20,7 @@
     "  \\dot{x}_2&=-\\kappa x_2(t) + \\beta \\tanh(x_2(t-\\tau_s)) + a_{21} \\tanh(x_2(t-\\tau_1))\n",
     "\\end{align}\n",
     "```\n",
-    "where $\\tau_1$ and $\\tau_2$ are the delays between neurons 1 and 2 and where $\\tau_s$ is the delay between each neuron getting a stimulus and reacting to that stimulus."
+    "where $\\tau_1$ and $\\tau_2$ are the delays between neurons 1 and 2 and where $\\tau_s$ is the delay between each neuron getting a stimulus and reacting to that stimulus. This example is the a demo for showing how MATLAB's DDE-Biftool works (*DDE-BIFTOOL demo 1 - Neuron*, 2014)."
    ]
   },
   {
@@ -28,15 +28,22 @@
    "id": "936f26f8",
    "metadata": {},
    "source": [
-    "The following packages and functions are needed:"
+    "The following packages and functions are needed for this demo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module DDETools.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
@@ -73,7 +80,7 @@
     }
    ],
    "source": [
-    "#Values of parameters (same as those given in the neuron demo for DDE-Biftool)\n",
+    "#Values of parameters (same as those given in the Neuron demo for DDE-Biftool)\n",
     "k=0.5\n",
     "beta=-1\n",
     "a12=1\n",
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -124,12 +131,12 @@
    "id": "7c7f7c1a",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past of DDEs. For this part of the example, the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` utilises this method and has a first output of `1` if the equilibrium point is stable and has `0` if it is unstable. Below we find the stability of one equilibrium point (0,0) with $a_{21}$=2.34:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -153,7 +160,7 @@
     "\n",
     "println(\"The stability is: $stabi (unstable)\")\n",
     "println(\"The eigenvalues are: $eigvalsi\")\n",
-    "println(\"The unstable eigenvalue $unstabeigi\") #this value matches that given in DDE-Biftool example so confirms stab_fnc_matrix is working correctly"
+    "println(\"The unstable eigenvalue $unstabeigi\") #this value matches that given in DDE-Biftool example so confirms stab_func_matrix is working correctly"
    ]
   },
   {
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -201,7 +208,7 @@
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
-    "unstable=(stab.==0.0)#highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
+    "unstable=(stab.==0.0) #highlights indices of unstable points (indicated by a 1 in unstable vector)\n",
     "\n",
     "#Below plots the equilibria and shows their stability\n",
     "fig1=Figure()\n",
@@ -225,12 +232,12 @@
    "id": "a9034871",
    "metadata": {},
    "source": [
-    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in the \"DDE_stability_breda_et_al\" folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1,A_2, A_3$ need to be found for the equilibrium point(s). These matrcies can be found manually (if possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` so we can loop over all equilibrium points."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in the \"DDE_stability_breda_et_al\" folder. To use ```stab_func_DDE``` for this example, the partial derivative matrices $A_0, A_1,A_2, A_3$ need to be found for the equilibrium point(s). These matrcies can be found either manually or by using ```f_deriv```. In this example we'll use ```f_deriv``` so we can loop over all equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "669aa48b",
    "metadata": {},
    "outputs": [
@@ -275,7 +282,7 @@
    "id": "4c2dead6",
    "metadata": {},
    "source": [
-    "Notice that the Breda et al method (used in ```stab_func_DDE```) is much quicker at finding stability than approximating it using a large matrix (method used in ```stab_func_matrix```)."
+    "Notice that the Breda et al method (used in ```stab_func_DDE```) is much quicker at finding stability, taking a few seconds, than approximating it using a large matrix (method used in ```stab_func_matrix```), which takes over a minute."
    ]
   },
   {
@@ -291,12 +298,12 @@
    "id": "3f6fb19a",
    "metadata": {},
    "source": [
-    "The eigenvalues of the linearised system determine the equilibrium's stability. Below is gives a plot of the real part of the rightmost eigenvalues for the equilibria."
+    "The eigenvalues of the linearised system determine the equilibrium's stability. Below gives a plot of the real part of the rightmost eigenvalues for the equilibria."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b6fce3f3",
    "metadata": {},
    "outputs": [
@@ -316,7 +323,7 @@
     "realeigs=real(eigvals1) #gets real parts of all eigenvalues for each tracked point\n",
     "n_eq=length(avals) #number of equilibrium points\n",
     "\n",
-    "maxrealeigs=fill(NaN,n_eq) #blank array for largest real part for each equilibrium point\n",
+    "maxrealeigs=fill(NaN,n_eq) #blank array for largest real part of an eigenvalue for each equilibrium point\n",
     "\n",
     "for i in 1:n_eq\n",
     "    realindx=argmax(realeigs[i]) #finds index of largest real part of eigenvalues for a21 value\n",
@@ -338,7 +345,7 @@
    "id": "3d08b9cc",
    "metadata": {},
    "source": [
-    "A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start finding the Hopf parameters by finding the initial guess of the $a_{21}$ value for the Hopf bifurcation: "
+    "A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start to find the Hopf parameters by first finding the initial guess of the $a_{21}$ value for the Hopf bifurcation."
    ]
   },
   {
@@ -351,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "e08cf059",
    "metadata": {},
    "outputs": [
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "1447cdca",
    "metadata": {},
    "outputs": [
@@ -396,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -434,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -465,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "e00c8cf8",
    "metadata": {},
    "outputs": [
@@ -490,12 +497,12 @@
    "id": "76d9b795",
    "metadata": {},
    "source": [
-    "We see that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $a_{21}$ value obtained from ```stab_func_DDE``` ($\\approx 0.81$) is closer to the true $a_{21}$ Hopf value ($\\approx 0.807$) than the initial guess when using ```stab_func_matrix``` ($\\approx 0.84$)."
+    "We see that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $a_{21}$ value obtained from ```stab_func_DDE``` ($\\approx 0.81$) is closer to the true $a_{21}$ Hopf value ($\\approx 0.807$) than the initial guess of $a_{21}$ when using ```stab_func_matrix``` ($\\approx 0.84$)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -539,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "95419484",
    "metadata": {},
    "outputs": [
@@ -547,18 +554,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using found Hopf bifurcations above the answer to Equation (3) is -3.687616878522704e-11, which is close to  0 so found Hopf values are correct\n"
+      "Using the found Hopf bifurcation values above, the answer to Equation (3) is -3.687616878522704e-11, which is close to 0 so the found Hopf values are correct with a reasonable accuracy\n"
      ]
     }
    ],
    "source": [
     "eq3ans=-(om_hopf)^2 -2*om_hopf*beta*sin(om_hopf*taus) - 2*k*beta*cos(om_hopf*taus)+k^2+(beta^2)*cos(2*om_hopf*taus) -a_hopf*a12*cos(om_hopf*(tau1+tau2))\n",
-    "println(\"Using found Hopf bifurcations above the answer to Equation (3) is $eq3ans, which is close to  0 so found Hopf values are correct\")"
+    "println(\"Using the found Hopf bifurcation values above, the answer to Equation (3) is $eq3ans, which is close to 0 so the found Hopf values are correct with a reasonable accuracy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "ce97431d",
    "metadata": {},
    "outputs": [
@@ -566,13 +573,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using found Hopf bifurcations above the answer to Equation (4) is -4.159839139816768e-11, which is close to  0 so found Hopf values are correct\n"
+      "Using the found Hopf bifurcation values above, the answer to Equation (4) is -4.159839139816768e-11, which is close to 0 so found Hopf values are correct with a reasonable accuracy\n"
      ]
     }
    ],
    "source": [
     "eq4ans=2*om_hopf*k - 2*om_hopf*beta*cos(om_hopf*taus)+2*k*beta*sin(om_hopf*taus)-(beta^2)*sin(2*om_hopf*taus)+a_hopf*a12*sin(om_hopf*(tau1+tau2))\n",
-    "println(\"Using found Hopf bifurcations above the answer to Equation (4) is $eq4ans, which is close to  0 so found Hopf values are correct\")"
+    "println(\"Using the found Hopf bifurcation values above, the answer to Equation (4) is $eq4ans, which is close to 0 so found Hopf values are correct with a reasonable accuracy\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53743bc9",
+   "metadata": {},
+   "source": [
+    "Hence, the functions `create_hopffunc` and `newton` are working well to find the true Hopf bifurcation values."
    ]
   },
   {
@@ -588,12 +603,12 @@
    "id": "6c8c6879",
    "metadata": {},
    "source": [
-    "We continue the Hopf points in the $a_{21}$ and $\\tau_s$ parameter plane:"
+    "Finally, we continue the Hopf points in the $a_{21}$ and $\\tau_s$ parameter plane:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
@@ -609,7 +624,7 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=DDETools.create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises hopf function and initial guess for hopf information with a21≈0.81 and tau_s=1.5\n",
+    "yheq01,fhopfeq1=DDETools.create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises Hopf function and initial guess for hopf information with a21≈0.81 and tau_s=1.5\n",
     "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and τ_s over (a21, τ_s) plane\n",
     "\n",
     "#Plot of continuation/tracking in (a21,τ_s) plane\n",
@@ -619,7 +634,7 @@
     "ylims!(ax6,[1,11])\n",
     "xlims!(ax6,[-0.5,2.5])\n",
     "ax6.xticks=-0.5:0.5:2.5 #creates x-axis increments that match those given in DDE-Biftool (makes comparsion between the two easier)\n",
-    "ax6.yticks=1:1:11 #creates y-axs increments that match those given in DDE-Biftool\n",
+    "ax6.yticks=1:1:11 #creates y-axis increments that match those given in DDE-Biftool\n",
     "fig6"
    ]
   },
@@ -636,7 +651,8 @@
    "id": "628565e5",
    "metadata": {},
    "source": [
-    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. *DDE-BIFTOOL demo 1 - Neuron* (12/2014). Available at https://ddebiftool.sourceforge.net/demos/neuron/html/demo1.html (Accessed: 29 August 2025)\n",
+    "2. Breda D., Maset S., Vermiglio R. (2009). 'TRACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations', *Lecture Notes in Control And Information Sciences*, volume 388, pp 145-155. Available at: http://dx.doi.org/10.1007/978-3-642-02897-7_13"
    ]
   }
  ],
