Mackey-Glass equation demo

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -291,7 +291,7 @@
    "id": "eeaec415",
    "metadata": {},
    "source": [
-    "Note that while the initial guess of $\\tau$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE```, the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc``` has been made to, currently, only work for ```stab_func_matrix```. The code for finding the initial guesses of $\\tau$ for the two different stability methods is given below:"
+    "Note that while the initial guess of $\\tau$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE```, the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc```, currently, only works for ```stab_func_matrix```. The code for finding the initial guesses of $\\tau$ for the two different stability methods is given below:"
    ]
   },
   {
