--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -353,7 +353,7 @@
    "id": "7af97031",
    "metadata": {},
    "source": [
-    "Note that while the initial guess of $a_{21}$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE```, the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc``` has been made to, currently, only work for ```stab_func_matrix```. The code for finding the initial guesses of $a_{21}$ for the two different stability methods is given below:"
+    "Note that while the initial guess of $a_{21}$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE```, the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc```, currently, only works for ```stab_func_matrix```. The code for finding the initial guesses of $a_{21}$ for the two different stability methods is given below:"
    ]
   },
   {
