Barycentric interpolation explanation and examples

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -9,13 +9,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28c1f26d",
+   "metadata": {},
+   "source": [
+    "For this notebook the following packages are needed:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using CairoMakie"
+    "using CairoMakie\n",
+    "include(\"../DDETools/DDETools.jl\")\n",
+    "using .DDETools\n"
    ]
   },
   {
@@ -40,7 +50,7 @@
     "```\n",
     "where $\\ell_j$ is the *Lagrange polynomial* corresponding to node $x_j$.\n",
     "\n",
-    "However, as discussed in (Berrut, Trefethen 2004), in this form each evaluation of $p(x)$ requires $O(N^2)$ additions and multiplications, and adding a new node and it's corresponding $f$ value means starting from scratch, all while the computation is numerically unstable. To combat this, Berrut and Trefethen rewrote $p(x)$ into a more useful form, known as the *barycentric formula* for $p$:\n",
+    "However, as discussed in (Berrut, Trefethen 2004), in this form each evaluation of $p(x)$ requires $O(N^2)$ additions and multiplications, and adding a new node and it's corresponding $f$ value means starting from scratch. This is all while the computation is numerically unstable. To combat this, Berrut and Trefethen rewrote $p(x)$ into a more useful form, known as the *barycentric formula* for $p$:\n",
     "\n",
     "```math\n",
     "p(x)=\\frac{\\sum_{j=1}^{N+1}\\frac{w_j}{x-x_j}f_j}{\\sum_{j=1}^{N+1} \\frac{w_j}{x-x_j}}\\tag{1},\n",
@@ -58,7 +68,7 @@
     "\\ell_j(x)=\\frac{\\frac{w_j}{(x-x_j)}}{\\sum_{k=1}^{N+1} \\frac{w_k}{x-x_k}}\\tag{2}\n",
     "```\n",
     "\n",
-    "Given $\\ell_j$ in the form (2) and with some manipulation (Berrut et al 2004), the following can be obtained:\n",
+    "Given $\\ell_j$ in the form (2) and with some manipulation (Berrut, Trefethen 2004), the following can be obtained:\n",
     "\n",
     "```math\n",
     "\\ell'_j(x_i)=\\begin{cases} \\ell'_j(x_i)=\\frac{w_j/w_i}{x_i-x_j}, & \\text{for $i\\neq j$}\\\\\n",
@@ -93,7 +103,7 @@
     "\n",
     "\n",
     "The output for ```j_eval```:\n",
-    "1. `Dk` is matrix such that when multiplied by $\\textbf{f}$ (the values of $f(x_j)$,i.e. $f_j$, in vector form), the user gets the values of $f(x_e)$ when `diff`=0; $f'(x_e)$ when `diff`=1 and so on.\n"
+    "1. `Dk` is matrix such that when multiplied by $\\textbf{f}$  (the values of $f(x_j)$, i.e. $f_j$, in vector form), the user gets the values of $f(x_e)$ when `diff`=0; $f'(x_e)$ when `diff`=1 and so on.\n"
    ]
   },
   {
@@ -132,7 +142,7 @@
    "id": "06dc5652",
    "metadata": {},
    "source": [
-    "When wishing to evaluate $f(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 0 (the default). For given interpolation points/nodes, $x_j$, and some desired points, $x_e$, the function ```j_eval``` uses Equation (2) to return the matrix \n",
+    "When wishing to evaluate $f(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to `0` (the default). For given interpolation points, $x_j$, and some desired points, $x_e$, the function ```j_eval``` uses Equation (2) to return the matrix \n",
     "```math\n",
     "E_{ij}=\\ell_j(x_i)\n",
     "```\n",
@@ -156,7 +166,7 @@
    "id": "f9ab4d4c",
    "metadata": {},
    "source": [
-    "The function `j_eval` uses the matrix $D^{(1)}$, found by `j_diff`, when the arugument `diff` is non-zero. When wishing to find $f'(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to 1. If the user wishes to find $f''(x_e)$, the `diff` argument should be set to 2. For higher derivatives `diff` should be set at $n$ for the $n$ th-derivative.\n",
+    "The function `j_eval` uses the matrix $D^{(1)}$, found by `j_diff`, when the arugument `diff` is non-zero. When wishing to find $f'(x_e)$, the user must ensure the `diff` argument of `j_eval` is set to `1`. If the user wishes to find $f''(x_e)$, the `diff` argument should be set to `2`. For higher derivatives `diff` should be set at `n` for the $n$ th-derivative.\n",
     "\n",
     "For differentiation, the `j_eval` functions works like this:\n",
     "1. `j_eval` finds the matrix $E$, \n",
@@ -165,6 +175,7 @@
     "- If `diff`=1 then `Dk`=$E^*D$\n",
     "- If `diff`=2 then `Dk`=$E^*D^*D$\n",
     "- If `diff`=3 then `Dk`=$E^*D^*D^*D$\n",
+    "- If `diff`=$n$ then `Dk`=$E^*D^n$\n",
     "\n",
     "The output `Dk` of `j_eval` is then multiplied by the vector $\\textbf{f}$, of $f_j$ values, to find the derivative of $f$ at the desired points $x_e$. \n"
    ]
@@ -235,14 +246,12 @@
     }
    ],
    "source": [
-    "include(\"../shared/j_diff.jl\")\n",
-    "include(\"../shared/j_eval.jl\")\n",
     "N1=20 #so we have 21 interpolation/Chebyshev points\n",
     "xjvals=cos.(pi*(0:N1)'/N1)[:] #interpolation points in the form of Chebyshev points of the 2nd kind\n",
     "xivals=[0.5,0.75] #points you want to evaluate at (x_e)\n",
     "fvec=cos.(xjvals)[:] #f_j values \n",
     "\n",
-    "emat=j_eval(xjvals,xivals) #E matrix of l_j(x_i) components, where x_i is a point from x_e\n",
+    "emat=DDETools.j_eval(xjvals,xivals) #E matrix of l_j(x_i) components, where x_i is a point from x_e\n",
     "fxivals2=(emat*fvec) #gives f(x_e) values "
    ]
   },
@@ -296,7 +305,7 @@
     }
    ],
    "source": [
-    "diffmat=j_eval(xjvals,xivals,diff=1) #utilises j_diff(xijvals) before outputting Dk=E*D\n",
+    "diffmat=DDETools.j_eval(xjvals,xivals,diff=1) #utilises j_diff(xijvals) before outputting Dk=E*D\n",
     "dfxivals=diffmat*fvec #gives f'(x_e)=cos'([0.5,0.75])"
    ]
   },
@@ -351,7 +360,7 @@
    ],
    "source": [
     "#Finding f''(0.5), f''(0.75) for f(x)=cos(x)\n",
-    "D2=j_eval(xjvals,xivals,diff=2) #returns E*D*D, where D is found using j_diff(xjvals)\n",
+    "D2=DDETools.j_eval(xjvals,xivals,diff=2) #returns E*D*D, where D is found using j_diff(xjvals)\n",
     "d2fvals=D2*fvec #gives f''(x_e)"
    ]
   },
@@ -411,7 +420,7 @@
     "for k in 1:length(ni)\n",
     "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind for N=ni[k]\n",
     "    fvec_ni=cos.(xjvals_ni)[:]#fj values for xj values given N=ni[k]\n",
-    "    emat_ni=j_eval(xjvals_ni,xivals) #E matrix of lj(xi) components\n",
+    "    emat_ni=DDETools.j_eval(xjvals_ni,xivals) #E matrix of lj(xi) components\n",
     "    fxivals_ni=(emat_ni*fvec_ni)#finds estimated value of f(xe) using interpolation (polynomial)\n",
     "    max_error[k]=findmax(abs.(fxivals_ni-true_fxi))[1] #finds maximum error between approximated f(xe) and the true f(xe)\n",
     "end \n",
@@ -427,7 +436,7 @@
    "id": "9de6f430",
    "metadata": {},
    "source": [
-    "The above plot shows the error decreasing drastically with increased number of interpolation points $N$. It is seen from this graph that around $N$=20 is sufficient to have small error. "
+    "The above plot shows the error decreasing drastically with increased number of interpolation points $N$. It is seen from this graph that around $N$=20 is sufficient to have small error and to be reasonable confident in `j_eval`'s ability."
    ]
   },
   {
@@ -467,13 +476,13 @@
     }
    ],
    "source": [
-    "include(\"binter_example.jl\")\n",
+    "include(\"binter_example.jl\") #function f(x)=|x|+0.5x-x²\n",
     "N2=200 #so we have 201 interpolation/Chebyshev points\n",
     "xjvals2=cos.(pi*(0:N2)'/N2)[:] #interpolation points\n",
     "xivals2=[-0.99:0.02:0.99;] #desired points (x_e)\n",
     "fvec2=binter_example(xjvals2) #finds f_j values\n",
     "\n",
-    "emat2=j_eval(xjvals2,xivals2) #E matrix of lj(xi) components\n",
+    "emat2=DDETools.j_eval(xjvals2,xivals2) #E matrix of lj(xi) components\n",
     "fxivals2=(emat2*fvec2)\n",
     "\n",
     "fig2=Figure()\n",
@@ -487,7 +496,7 @@
    "id": "9444fa3d",
    "metadata": {},
    "source": [
-    "Note that while this example is good to show that more commplicated functions can be explored using barycentric interpolation, differentiation is complicated here. The error plot below for increasing the number of interpolation points $N$ shows the complicated nature of $f(x)=|x|+0.5x-x^2$. The vastly varying errors suggests that this function is not well-defined for barycentric interpolation."
+    "Note that while this example is good to show that more commplicated functions can be explored using barycentric interpolation, differentiation is complicated here. The error plot below for increasing the number of interpolation points $N$ shows the complicated nature of $f(x)=|x|+0.5x-x^2$. The vastly varying errors suggests that this function is not very well defined for barycentric interpolation."
    ]
   },
   {
@@ -513,11 +522,11 @@
     "max_error2=fill(NaN, length(ni))\n",
     "true_fxi2=binter_example.(xivals) #finds true values of f(x_e)\n",
     "for k in 1:length(ni)\n",
-    "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind or n=ni[k]\n",
-    "    fvec_ni2=binter_example.(xjvals_ni)[:]#fj values for xj values given n=ni[k]\n",
-    "    emat_ni2=j_eval(xjvals_ni,xivals) #E matrix of lj(xi) components\n",
-    "    fxivals_ni2=(emat_ni2*fvec_ni2)#finds estimated value of f(xi) using interpolation (polynomial)\n",
-    "    max_error2[k]=findmax(abs.(fxivals_ni2-true_fxi2))[1] #finds maximum error between approximated f(xi) and the true f(xi)\n",
+    "    xjvals_ni=cos.(pi*(0:ni[k])'/ni[k])[:] #interpolation points in the form of chebyshev points of the 2nd kind for N=ni[k]\n",
+    "    fvec_ni2=binter_example.(xjvals_ni)[:]#fj values for xj values given N=ni[k]\n",
+    "    emat_ni2=DDETools.j_eval(xjvals_ni,xivals) #E matrix of lj(xi) components\n",
+    "    fxivals_ni2=(emat_ni2*fvec_ni2)#finds estimated value of f(xe) using interpolation (polynomial)\n",
+    "    max_error2[k]=findmax(abs.(fxivals_ni2-true_fxi2))[1] #finds maximum error between approximated f(xe) and the true f(xe)\n",
     "end \n",
     "\n",
     "fig3=Figure()\n",
@@ -540,7 +549,7 @@
    "id": "dcf90748",
    "metadata": {},
    "source": [
-    "The stability of an equilibrium point can be found using barycentric interpolation. The function ```stab_func_DDE``` uses barycentric interpolation as a basis to find the stability, with the method discussed in (Breda et al 2009). Below is an example for a delay differential equation system that models the interaction between two neurons. A more indepth look at this system can be found in the \"Neuron_example\" demo (in the \"Neuron_demo\" folder) but it's system is given by:\n",
+    "The stability of an equilibrium point can be found using barycentric interpolation. The function ```stab_func_DDE``` uses barycentric interpolation as a basis to find the stability, with the method discussed in (Breda et al 2009). Below is an example for a delay differential equation (DDE) system that models the interaction between two neurons (*DDE-BIFTOOL demo 1 - Neuron*, 2014). A more indepth look at the neuron DDE system can be found in the \"Neuron_example\" demo (in the \"Neuron_demo\" folder) but it's system is given by:\n",
     "```math\n",
     "\\begin{align}\n",
     "  \\dot{x}_1&= -\\kappa x_1(t) + \\beta \\tanh(x_1(t-\\tau_s)) + a_{12} \\tanh(x_2(t-\\tau_2))\\\\\n",
@@ -568,14 +577,7 @@
    "source": [
     "using LinearAlgebra\n",
     "include(\"../Neuron_demo/neuronfunc.jl\") #system of neuron example\n",
-    "include(\"../Neuron_demo/neurontau.jl\") #Delay forumla for neuron example\n",
-    "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
-    "include(\"../shared/newton.jl\") #Newton function\n",
-    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"../shared/stab_func_DDE.jl\")#finds stability and eigenvalues (and if asked, eignevectors) using method found in (Breda et al 2009) and depends on j_eval and j_diff"
+    "include(\"../Neuron_demo/neurontau.jl\") #Delay forumla for neuron example"
    ]
   },
   {
@@ -595,8 +597,8 @@
     "taus=1.5\n",
     "\n",
     "nd=3 #there are 3 delays\n",
-    "y0,feq=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and finding starting point for equilibria branching\n",
-    "alist1,ytan1=track_curve(feq,y0,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
+    "y0,feq=DDETools.create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and find the starting point for equilibria branching\n",
+    "alist1,ytan1=DDETools.track_curve(feq,y0,[0.0,0,1],nmax=550)#tracks equilibria to give equilibria branch\n",
     "\n",
     "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]); #finds the values of x1 and x2 for the equilibria\n",
     "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)];#creates a vector of vectors of all the equilibria points\n",
@@ -627,11 +629,11 @@
     "N3=50 #so there are 51 interpolation points\n",
     "\n",
     "for i in 1:neq\n",
-    "    A0=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
-    "    A1=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ_1)\n",
-    "    A2=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3) #finds partial derivative matrix with respect to x(t-τ_2)\n",
-    "    A3=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4) #finds partial derivative matrix with respect to x(t-τ_s)\n",
-    "    stab[i],=stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N3) #gives stability of each equilibrium point\n",
+    "    A0=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
+    "    A1=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ_1)\n",
+    "    A2=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3) #finds partial derivative matrix with respect to x(t-τ_2)\n",
+    "    A3=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4) #finds partial derivative matrix with respect to x(t-τ_s)\n",
+    "    stab[i],=DDETools.stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N3) #gives stability of each equilibrium point\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -651,7 +653,7 @@
    "id": "4eebb8c8",
    "metadata": {},
    "source": [
-    "Hence, with ```stab_func_DDE```'s dependence on `j_eval` and `j_diff`, barycentric interpolation can be used as part of the finding stability of points in delay differential equations. The use of `stab_func_DDE` is explored and explained further in \"Stability_finding_for_DDEs\" (located in the \"DDE_stability_Breda_et_al\" folder)."
+    "Hence, with ```stab_func_DDE```'s dependence on `j_eval` and `j_diff`, barycentric interpolation can be used in finding the stability of points in delay differential equations. The use of `stab_func_DDE` is explored and explained further in \"Stability_finding_for_DDEs\" (located in the \"DDE_stability_Breda_et_al\" folder)."
    ]
   },
   {
@@ -667,8 +669,9 @@
    "id": "5f494b6a",
    "metadata": {},
    "source": [
-    "1. J-P. Berrut, L.N. Trefethen, *Barycentric Lagrange Interpolation*, SIAM Review, Vol 46, No.3, pp. 501-517, 2004\n",
-    "2. D. Breda, S. Maset and R. Vermiglio . *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. *DDE-BIFTOOL demo 1 - Neuron* (12/2014). Available at https://ddebiftool.sourceforge.net/demos/neuron/html/demo1.html (Accessed: 29 August 2025)\n",
+    "2. Berrut J.-P., Trefethen L.N. (2004). 'Barycentric Lagrange Interpolation', *SIAM Review*, Vol 46, No.3, pp. 501-517. Available at: https://www.jstor.org/stable/20453536 \n",
+    "3. Breda D., Maset S., Vermiglio R. (2009). 'TRACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations', *Lecture Notes in Control And Information Sciences*, volume 388, pp 145-155. Available at: http://dx.doi.org/10.1007/978-3-642-02897-7_13"
    ]
   }
  ],
