--- a/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
+++ b/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4dc090b6",
    "metadata": {},
    "outputs": [
@@ -35,9 +35,8 @@
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
-    "include(\"../shared/j_eval.jl\")\n",
-    "include(\"../shared/j_diff.jl\")\n",
-    "include(\"../shared/stab_func_DDE.jl\")"
+    "include(\"../DDETools/DDETools.jl\")\n",
+    "using .DDETools"
    ]
   },
   {
@@ -45,7 +44,7 @@
    "id": "fde44163",
    "metadata": {},
    "source": [
-    "The stability function (```stab_func_DDE```) discussed in this notebook is from the stability idea put forward by D. Breda, S. Maset and R. Vermiglio (Breda, et al. 2009). Note ```stab_func_DDE``` in it's current form has only been trialled on DDE systems with constant delays."
+    "The stability function (```stab_func_DDE```) discussed in this notebook is from the stability idea put forward by D. Breda, S. Maset and R. Vermiglio in (Breda, et al. 2009). Note that ```stab_func_DDE``` in it's current form has only been trialled on DDE systems with constant delays."
    ]
   },
   {
@@ -56,11 +55,11 @@
     "The ```stab_func_DDE``` function has the following input arguments:\n",
     "1. ```A``` which are matrices of the (linearised) DDE system - they should be linearised around the equilibrium point the user wishes to find the stability of. This argument should be written in the form of a vector of matrices.\n",
     "2. ```taus``` are the delays. This argument should be written in vector form.\n",
-    "3.  ```N``` is the number of nodes for interpolation the user wishes to have (so you get N+1 nodes) - note the function uses Chebyshev points of the 2nd kind for the interpolation points\n",
+    "3.  ```N``` is the number of interpolation points the user wishes to have (so you get N+1 nodes) - note the function uses Chebyshev points of the 2nd kind for the interpolation points\n",
     "4. Optional argument: ```eigvecs``` tells the function to output the eigenvectors (in matrix form, where the $i$-th column are the eigenvectors of $i$-th eigenvalue); default is ```0``` (eigenvectors not outputted) \n",
     "\n",
     "The ```stab_func_DDE``` function outputs the following:\n",
-    "1. ```stab``` is the stability of the (equilibrium) point (gives 1 if the point is stable, 0 if the point is unstable)\n",
+    "1. ```stab``` is the stability of the (equilibrium) point (gives `1` if the point is stable, `0` if the point is unstable)\n",
     "2. ```sm_eigvals``` are the eigenvalues of the point\n",
     "3. If asked: ```sm_eigvecs``` are the eigenvectors of the eigenvalues"
    ]
@@ -74,7 +73,7 @@
     "```math\n",
     "\\dot{u}=A_0u(t)+A_1u(t-\\tau_1)+...+A_nu(t-\\tau_n)\\tag{1}\n",
     "```\n",
-    "Now assume there are  $N+1$ distint interpolation points/nodes, $t_j$ for $j=1,...,N+1$, with correspodning numbers $f_j$. An interpolation polynomial, $p$, can be found such that $p(t_j)=f_j$. A common way to write $p$ is $p(t)=\\sum_{j=1}^{N+1} f_j \\ell_j(t)$, where $\\ell_j$ is the Lagrnage plynomial corresponding to the node $t_j$ (Berrut, Trefethen 2004). Berrut and Trefethen explored in (Berrut, Trefethen 2004) different ways to write this polynomial in useful ways including a key formula called the *barycentric formula* of $p$:\n",
+    "Now assume there are  $N+1$ distint interpolation points, $t_j$ for $j=1,...,N+1$, with corresponding numbers $f_j$. An interpolation polynomial, $p$, can be found such that $p(t_j)=f_j$. A common way to write $p$ is $p(t)=\\sum_{j=1}^{N+1} f_j \\ell_j(t)$, where $\\ell_j$ is the Lagrange polynomial corresponding to the node $t_j$ (Berrut, Trefethen 2004). Berrut and Trefethen explored in (Berrut, Trefethen 2004) different ways to write this polynomial in useful ways including a key formula called the *barycentric formula* of $p$:\n",
     "```math\n",
     "p(t)=\\frac{\\sum_{j=1}^{N+1}\\frac{w_j}{t-t_j}f_j}{\\sum_{j=1}^{N+1} \\frac{t_j}{t-t_j}}\\tag{2},\n",
     "```\n",
@@ -95,7 +94,7 @@
     "```math\n",
     "\\mathcal{A}_N=\\begin{pmatrix} a_1 & a_2 & ... & a_{N+1}\\\\ d_{2,1} & d_{2,2} & ... &d_{2,N+1}\\\\ . &. &. &.\\\\ . &. &... &.\\\\ . &. &. &.\\\\d_{N+1,1} & d_{N+1,2} &...& d_{N+1,N+1}\\end{pmatrix},\n",
     "```\n",
-    "where $a_j= A_0\\ell_j(0)+A_1\\ell_j(-\\tau_1)+...+A_n \\ell_j(-\\tau_n)$ (for the Equation (1)) and where $d_{i,j}, i=2,...,N+1, j=1,...,N+1$ are the components of the matrix first-order differentiation matrix $D^{(1)}$.\n",
+    "where $a_j= A_0\\ell_j(0)+A_1\\ell_j(-\\tau_1)+...+A_n \\ell_j(-\\tau_n)$ (for the Equation (1)) and where $d_{i,j}, i=2,...,N+1, j=1,...,N+1$ are the components of the first-order differentiation matrix $D^{(1)}$.\n",
     "\n",
     "The function `stab_func_DDE` finds the stability by looking at the eigenvalues of $\\mathcal{A}_N$ to see if any have real parts greater than 0 (to indicate instability)."
    ]
@@ -158,15 +157,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10152458",
+   "metadata": {},
+   "source": [
+    "Since the stability indicator is `1`, the system in it's current form is stable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dacbce25",
    "metadata": {},
    "source": [
     "The eigenvalues of a system, with $n$ delays and $m$ equations, must fulfill the property:\n",
     "```math\n",
     "\\begin{equation}\n",
-    "[\\lambda I - A_0 - A_1 e^{-\\lambda \\tau_1}-...-A_n e^{-\\lambda \\tau_n}]v=0 \\tag{4}\n",
+    "[\\lambda I - A_0 - A_1 e^{-\\lambda \\tau_1}-...-A_n e^{-\\lambda \\tau_n}]v=0, \\tag{4}\n",
     "\\end{equation}\n",
     "``` \n",
+    "where $I, A_0,...,A_n$ are $n \\times n$ dimensional.\n",
+    "\n",
     "To check the accuracy of ```stab_func_DDE```, each eigenvalue $\\lambda_j$ for $j=1,...,m^*(N+1)$ is put into Equation (4) with the eigenvalues' first eigenvector outputted by ```stab_func_DDE``` for the vector $v$."
    ]
   },
@@ -217,7 +226,7 @@
     "    stab_err[k]=norm(comp_vec) #finds the error of stab_func_DDE for chosen eigenvalue and eigenvector\n",
     "end \n",
     "\n",
-    "#Assume we accept a tolerance of 10^-7 (1e-7) from 0 we find all eigenvalues that are at least of this tolerance\n",
+    "#Assume we accept a tolerance of 10^-7 (1e-7) from 0, we find all eigenvalues that are at least of this tolerance\n",
     "stab_acc_indx=findall(<=(1e-7),stab_err) #finds indices of eigenvalues that are at least of accuracy 1e-7\n",
     "eig_acc=eigvals1[stab_acc_indx] #eigenvalues that are at least 1e-7 accurate \n",
     "\n",
@@ -272,7 +281,7 @@
    "id": "6846c37b",
    "metadata": {},
    "source": [
-    "For the next example, we'll look at the DDE system that models the interaction between two neurons. This example is the prime demo for demonstrating the use of MATLAB's DDE-Biftool, so comparisons can easily be drawn and the accuracy of ```stab_func_DDE``` can be explored. The neuron example's DDE system is:\n",
+    "For the next example, we'll look at the DDE system that models the interaction between two neurons. This example is the main demo for demonstrating the use of MATLAB's DDE-Biftool, so comparisons can easily be drawn and the accuracy of ```stab_func_DDE``` can be explored. The neuron example's DDE system is (*DDE-BIFTOOL demo 1 - Neuron*, 2014):\n",
     "```math\n",
     "\\begin{align*}\n",
     "  \\dot{x}_1&= -\\kappa x_1(t) + \\beta \\tanh(x_1(t-\\tau_s)) + a_{12} \\tanh(x_2(t-\\tau_2))\\\\\n",
@@ -333,6 +342,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e14550d",
+   "metadata": {},
+   "source": [
+    "The stability indicator is `0` so for the chosen parameters the equilibrium point is unstable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa6af68f",
    "metadata": {},
    "source": [
@@ -376,7 +393,7 @@
     "\n",
     "#Assume we accept a tolerance of 10^-7 (1e-7) from 0 we find all eigenvalues that are at least of this tolerance\n",
     "stab2_acc_indx=findall(<=(1e-7),stab2_err) #finds indices of eigenvalues that are at least of accuracy 1e-7\n",
-    "eig2_acc=eigvals2[stab2_acc_indx] #eignvalues that are at least 1e-7 accurate \n",
+    "eig2_acc=eigvals2[stab2_acc_indx] #eigenvalues that are at least 1e-7 accurate \n",
     "\n",
     "#Plot of eigenvalues that are at least 1e-7 accurate\n",
     "fig2=Figure()\n",
@@ -413,7 +430,7 @@
    "id": "84fbb5fa",
    "metadata": {},
    "source": [
-    "Again we see that more than half the eigenvalues are at a suitable accuracy so ```stab_func_DDE``` is pretty accurate and working well for this function and 31 interpolation points."
+    "Again we see that more than half the eigenvalues are at a suitable accuracy so ```stab_func_DDE``` is pretty accurate and working well for this function when using at least 31 interpolation points."
    ]
   },
   {
@@ -429,7 +446,7 @@
    "id": "1673a0ce",
    "metadata": {},
    "source": [
-    "For the final example we will look at the Mackey-Glass equation. It is 1-dimensional and has a single delay. Again Mackey-Glass is an example demo in DDE-Biftool. The Mackey-Glass equation is:\n",
+    "For the final example we will look at the Mackey-Glass equation. It is 1-dimensional and has a single delay. Again Mackey-Glass is an example demo in DDE-Biftool. The Mackey-Glass equation is (Manjunath, Raina 2014):\n",
     "```math\n",
     "\\begin{align*}\n",
     "  \\dot{x}&= \\frac{\\beta x(t-\\tau)}{1+[x(t-\\tau)]^n}- \\gamma x(t)\\\\\n",
@@ -469,14 +486,23 @@
     "m3=1 #1 dimensional system (x)\n",
     "\n",
     "#Below are the matrices to put into stab_func_DDE (for the parameters given above)\n",
-    "A0_3=[-1] #needs to be in vector/1x1 matrix form\n",
-    "A1_3=[-4] #needs to be in vector/1x1 matrix form\n",
+    "A0_3=[-1] #needs to be in vector form\n",
+    "A1_3=[-4] #needs to be in vector form\n",
     "\n",
-    "#The delays of system\n",
+    "#The delay of the system\n",
     "tau1_3=0.2\n",
+    "\n",
     "N3=165 #166 interpolation points\n",
     "\n",
     "stab3, eigvals3, eigvecs3=stab_func_DDE([A0_3, A1_3],[tau1_3],N3, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18f6a649",
+   "metadata": {},
+   "source": [
+    "The stability indicator is `1` so for the given parameter values the equilibrium point $x^*=1$ is stable."
    ]
   },
   {
@@ -514,17 +540,17 @@
     "end \n",
     "\n",
     "stab3_err=fill(NaN, neigs3) #creates blank array for the error of stab_func_DDE\n",
-    "Idm3=Matrix{Float64}(I,m3,m3) #creates 2x2 identity matrix \n",
+    "Idm3=Matrix{Float64}(I,m3,m3) #creates 1x1 identity matrix \n",
     "\n",
     "for k in 1:neigs3\n",
     "    ceq_vec3=(eigvals3[k]*Idm3 - A0_3 - A1_3*exp(-(eigvals3[k]*tau1_3)))*vjvec3[k] #finds the value of Equation (4) \n",
-    "    comp_vec3=ceq_vec3-[0] #finds the difference between value of LHS of Equation (4) for given eigenvalue and eigenvector and the true value [0,0]\n",
+    "    comp_vec3=ceq_vec3-[0] #finds the difference between value of LHS of Equation (4) for given eigenvalue and eigenvector and the true value [0]\n",
     "    stab3_err[k]=norm(comp_vec3) #finds the error of stab_func_DDE for chosen eigenvalue and eigenvector\n",
     "end \n",
     "\n",
     "#Assume we accept a tolerance of 10^-7 (1e-7) from 0 we find all eigenvalues that are at least of this tolerance\n",
     "stab3_acc_indx=findall(<=(1e-7),stab3_err) #finds indices of eigenvalues that are at least of accuracy 1e-7\n",
-    "eig3_acc=eigvals3[stab3_acc_indx] #eignvalues that are at least 1e-7 accurate \n",
+    "eig3_acc=eigvals3[stab3_acc_indx] #eigenvalues that are at least 1e-7 accurate \n",
     "\n",
     "#Plot of eigenvalues that are at least 1e-7 accurate\n",
     "fig3=Figure()\n",
@@ -560,7 +586,7 @@
    "id": "b1357192",
    "metadata": {},
    "source": [
-    "It is important to try to ensure that at least half of the eigenvalues outputted fulfill Equation (4), the number $N$ will often depend on the smoothness of the curve (a smoother curve will often require a lower $N$)."
+    "It is important to try to ensure that at least half of the eigenvalues outputted fulfil Equation (4), which for $N=165$ they do. The number $N$ will often depend on the smoothness of the curve (a smoother curve will often require a lower $N$)."
    ]
   },
   {
@@ -568,7 +594,7 @@
    "id": "ac9a1e10",
    "metadata": {},
    "source": [
-    "# Limitations"
+    "# Limitation of `stab_func_DDE`"
    ]
   },
   {
@@ -576,7 +602,7 @@
    "id": "8621dd67",
    "metadata": {},
    "source": [
-    "One slight limitation of `stab_func_DDE` to note is that the function can't cope with a large $N$ and small $\\tau$ together. The interpolation nodes it finds are too similar/close to each other with some also too close to 0. This means the weights found in `j_eval` (internal function in `stab_func_DDE`) can be infinity, meaning the function breaks down. Despite this limitation, `stab_func_DDE` is good for finding stability of points with small $\\tau$ if $N$ is lowered accordingly."
+    "One slight limitation of `stab_func_DDE` to note is that the function can't cope with a large $N$ and small $\\tau$ being used together. The interpolation nodes it finds are too similar to each other with some also too close to 0. This means the weights found in `j_eval` (internal function in `stab_func_DDE`) can be infinity, meaning the function breaks down. Despite this limitation, `stab_func_DDE` is good for finding stability of points with small $\\tau$ if $N$ is lowered accordingly."
    ]
   },
   {
@@ -592,8 +618,10 @@
    "id": "d84fec90",
    "metadata": {},
    "source": [
-    "1. J-P. Berrut, L.N. Trefethen, *Barycentric Lagrange Interpolation*, SIAM Review, Vol 46, No.3, pp. 501-517, 2004\n",
-    "2. D. Breda, S. Maset and R. Vermiglio . *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. *DDE-BIFTOOL demo 1 - Neuron* (12/2014). Available at https://ddebiftool.sourceforge.net/demos/neuron/html/demo1.html (Accessed: 29 August 2025)\n",
+    "2. Berrut J.-P., Trefethen L.N. (2004). 'Barycentric Lagrange Interpolation', *SIAM Review*, Vol 46, No.3, pp. 501-517. Available at: https://www.jstor.org/stable/20453536 \n",
+    "3. Breda D., Maset S. and Vermiglio R. (2009). 'TRACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations', *Lecture Notes in Control And Information Sciences*, volume 388, pp 145-155. Available at: http://dx.doi.org/10.1007/978-3-642-02897-7_13\n",
+    "4. Manjunath S. and Raina G. (2014) . 'Stability and Hopf bifurcation analysis of the Mackey-Glass and Lasota equations'. *The 26th Chinese Control and Decision Conference (2014 CCDC)*, pp. 2076–2082. Available at: https://doi.org/10.1109/CCDC.2014.6852509"
    ]
   }
  ],
