Finding stability using Breda et al. 2009 method - examples and explanation

--- a/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
+++ b/DDE_stability_Breda_et_al/Stability_finding_for_DDEs.ipynb
@@ -18,20 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4dc090b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "stab_func_DDE (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a3901725",
    "metadata": {},
    "outputs": [
@@ -152,7 +142,7 @@
     "tau2_1=0.3 #tau2 value taken to be 0.3 (same as (Breda, et al 2009) example)\n",
     "N1=85 #gives 86 interpolation points\n",
     "\n",
-    "stab1, eigvals1, eigvecs1=stab_func_DDE([A0_1, A1_1, A2_1],[tau1_1, tau2_1],N1, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
+    "stab1, eigvals1, eigvecs1=DDETools.stab_func_DDE([A0_1, A1_1, A2_1],[tau1_1, tau2_1],N1, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
    ]
   },
   {
@@ -193,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cb04771c",
    "metadata": {},
    "outputs": [
@@ -308,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fbd1b348",
    "metadata": {},
    "outputs": [
@@ -337,7 +327,7 @@
     "taus_2=1.5\n",
     "N2=30 #31 interpolation points\n",
     "\n",
-    "stab2, eigvals2, eigvecs2=stab_func_DDE([A0_2, A1_2, A2_2, A3_2],[tau1_2, tau2_2, taus_2],N2, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
+    "stab2, eigvals2, eigvecs2=DDETools.stab_func_DDE([A0_2, A1_2, A2_2, A3_2],[tau1_2, tau2_2, taus_2],N2, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
    ]
   },
   {
@@ -358,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8887b192",
    "metadata": {},
    "outputs": [
@@ -468,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd17dcdd",
    "metadata": {},
    "outputs": [
@@ -494,7 +484,7 @@
     "\n",
     "N3=165 #166 interpolation points\n",
     "\n",
-    "stab3, eigvals3, eigvecs3=stab_func_DDE([A0_3, A1_3],[tau1_3],N3, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
+    "stab3, eigvals3, eigvecs3=DDETools.stab_func_DDE([A0_3, A1_3],[tau1_3],N3, eigvecs=1) #the function outputs the stability, eigenvalues and eigenvectors (as eigvecs≠0)"
    ]
   },
   {
@@ -515,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "17887c55",
    "metadata": {},
    "outputs": [
@@ -563,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1797e1f4",
    "metadata": {},
    "outputs": [
